Small update to fix images spilling over their table
The images would be too wide if the dimensions of the original image
were greater than the width the box was supposed to be in. This forces
the width to 100%. Height is already set elsewhere as auto so should
work fine. This issue seemed only to appear in firefox.

--- a/wp-content/themes/canvas-child/style.css
+++ b/wp-content/themes/canvas-child/style.css
@@ -233,6 +233,11 @@ ul.nav li.current_page_item a {
 }
 
 
+/*styling to fix the images on the the drag and drop tests with images*/
+
+.wpProQuiz_maxtrixSortText > img {
+  width: 100% important!;
+}
 
 /*
 *
